samples/_failures_safe/1761508464_0b3b0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08c7a62e.c: In function ‘main’:
./samples/SAFE/__tmp_08c7a62e.c:155:12: error: missing terminating " character
  155 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_08c7a62e.c:155:5: error: expected expression at end of input
  155 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_08c7a62e.c:155:5: error: expected declaration or statement at end of input
